--- a/login.html
+++ b/login.html
@@ -13,11 +13,11 @@
             Gibberish format<br>
         <br>
     </p>
-          <button>Know More</button>
+          <button> <label for="uname">Know More</label>  </button>
     </div>
 
     <div id="div_1">
-        <h1 id="sign">Singin</h1>
+        <h1 id="sign">Signin</h1>
         <form action="login.php" method="POST">
             <input type="text" id="uname" name="uname" placeholder="Enter Username..."><br>
             <br>
